--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,37 @@
-# Prerequisites
-*.d
+# Residual files
+*/*.gch
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Build directories and binary files
+build/
+build/
+cmake-build-*/
+conan-cache/
 
-# Precompiled Headers
-*.gch
-*.pch
+# User spesific settings
+CMakeUserPresets.json
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# IDE files
+.vs/
+.idea/
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.swp
+*~
+_ReSharper*
+*.log
 
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+# OS Generated Files
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+.Spotlight-V100
+.Trashes
+.Trash-*
+$RECYCLE.BIN/
+.TemporaryItems
+ehthumbs.db
+Thumbs.db
